# dirt

./: .flake8  .pre-commit-config.yaml  pyproject.toml
dbt-shillelagh/: README.md  setup.py  tox.ini
dbt-shillelagh/dbt/adapters/shillelagh/: __init__.py  connections.py  impl.py
dbt-shillelagh/dbt/include/shillelagh/: dbt_project.yml  profile_template.yml
dbt-shillelagh/dbt/include/shillelagh/macros/: adapters.sql  catalog.sql
dbt-shillelagh/tests/functional/adapter/: test_basic.py
dirt-example/: dbt_project.yml
dirt-example/models/: example.sql  parental_leave.sql  parental_leave_spreadsheet.yaml
